--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 # site properties and page defaults
-title: HRJ-xiaoliu
+title: digital_agriculture_team's Website
 subtitle: 
 description: An engaging 1-3 sentence description of your lab.
 header: images/background.jpg
