--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,7 @@
 # site properties and page defaults
 title: digital_agriculture_team's Website
-subtitle: 
+subtitle:
+logo-text: false
 description: An engaging 1-3 sentence description of your lab.
 header: images/background.jpg
 footer: images/background.jpg
@@ -9,11 +10,7 @@ proofer: false
 # site social media and other links
 links:
   email: contact@HRJ-xiaoliu.com
-  orcid: 0000-0001-8713-9213
-  google-scholar: ETJoidYAAAAJ
   github: HRJ-xiaoliu
-  twitter: HRJ-xiaoliu
-  youtube: HRJ-xiaoliu
 
 ### jekyll settings
 
