--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,13 +32,13 @@ jobs:
           bundle install
           bundle exec jekyll build
 
-      - name: Sync to Aliyun OSS
-        uses: aliyun/oss-action@v1
+      - name: Setup Aliyun OSS Utility
+        uses: manyuanrong/setup-ossutil@v3.0
         with:
-          key-id: ${{ secrets.OSS_ACCESS_KEY_ID }}
-          key-secret: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
-          region: oss-cn-beijing
-          bucket: digital-agriculture-team-lab
-          assets: ./lab-website-template-main/_site/**
-          target: /
-          clean: true
+          endpoint: oss-cn-beijing.aliyuncs.com
+          access-key-id: ${{ secrets.OSS_ACCESS_KEY_ID }}
+          access-key-secret: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
+
+      - name: Sync to Aliyun OSS
+        run: |
+          ossutil cp -rf ./lab-website-template-main/_site/ oss://digital-agriculture-team-lab/
